client/src/app/static/main-nav/main-navbar-left/main-navbar-left.component.scss
@import "../../../../style/colors";

.main-navbar-left {
  .navbar-brand {
    display: block;
    width: 100%;
    max-width: 2.5rem;
  }
  .navbar-brand img {
    width: 100%;
  }
  .navbar-toggler {
    color: $brand-primary;
    left: 0;
    top: 50%;
    position: absolute;
    transform: translateY(-50%);
  }
  .btn-dropdown-toggle i {
    color: $main-nav-icon-color;
  }
  .navbar-nav {
    .nav-link {
      font-size: 1rem;
      color: $main-nav-hyperlink-color;
      -webkit-transition: all 150ms ease-in-out;
      -moz-transition: all 150ms ease-in-out;
      -ms-transition: all 150ms ease-in-out;
      -o-transition: all 150ms ease-in-out;
      transition: all 150ms ease-in-out;
    }
    .nav-link:hover {
      text-decoration: underline;
      cursor: pointer;
    }
    .btn-dropdown-toggle i {
      opacity: 0.6;
      -webkit-transition: all 150ms ease-in-out;
      -moz-transition: all 150ms ease-in-out;
      -ms-transition: all 150ms ease-in-out;
      -o-transition: all 150ms ease-in-out;
      transition: all 150ms ease-in-out;
    }
    .dropdown.show .btn-dropdown-toggle i,
    .btn-dropdown-toggle:hover i {
      opacity: 1;
    }
    .dropdown-menu {
      background-color: $brand-inverse;
    }
    .dropdown-menu i {
      top: 0;
      left: 10%;
      position: absolute;
      transform: translateY(-50%);
      color: $brand-inverse;
    }
    .dropdown-menu .dropdown-item {
      color: $white;
      -webkit-transition: all 150ms ease-in;
      -moz-transition: all 150ms ease-in;
      -ms-transition: all 150ms ease-in;
      -o-transition: all 150ms ease-in;
      transition: all 150ms ease-in;
    }
    .dropdown-menu .dropdown-item:hover {
      background-color: $white;
      color: $brand-inverse;
    }
  }
}

@media (max-width: 991px) {
  .main-navbar-left {
    .navbar-nav {
        padding: 0 0.5rem;
    }
    .navbar-collapse {
        top: 100%;
        left: 0;
        position: absolute;
        width: 100%;
        background-color: $header-bg-color;
    }
    .navbar-toggler i {
        color: $brand-inverse;
    }
    .nav-item {
      border-bottom: 1px dotted $gray-lighter;
    }
    .nav-item:last-child {
      border: 0;
    }
    .nav-link:hover {
        margin-left: 0.5rem;
    }
  }
}

